--- a/src/components/VanillaPortfolio/vanillaportfolio.css
+++ b/src/components/VanillaPortfolio/vanillaportfolio.css
@@ -7,6 +7,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-gap: 20px;
+  margin: 0 auto;
+  width: 95%;
 }
 
 .prop-img {
